# MultiOptPy

./: .readthedocs.yaml  OPTION_README.md  README.md  RUN_AUTOTS_README.md  config.json  config_mapper_test.json  conformation_search.py  environment_win11uma.yml  ieipmain.py  interface.py  mdmain.py  moleculardynamics.py  neb.py  nebmain.py  optimization.py  optimizer.py  optmain.py  orientation_search.py  pyproject.toml  relaxed_scan.py  requirements.txt  run_autots.py  run_mapper.py  software_path.conf
Interpolation/: ritz_interpolation.py
biaspotpy/: AFIR_potential.py  LJ_repulsive_potential.py  NRO_analysis.py  anharmonic_keep_potential.py  approx_hessian.py  ase_calculation_tools.py  asym_elllipsoidal_potential.py  bond_connectivity.py  calc_tools.py  cmds_analysis.py  constraint_condition.py  dxtb_calculation_tools.py  electrostatic_potential.py  fileio.py  flux_potential.py  gaussian_potential.py  idpp.py  ieip.py  interface.py  irc.py  keep_angle_potential.py  keep_arch_potential.py  keep_dihedral_angle_potential.py  keep_outofplain_angle_potential.py  keep_potential.py  mechano_force_potential.py  moleculardynamics.py  nanoreactor_potential.py  neb.py  oniom.py  oniom_utils.py  optimization.py  optimizer.py  parameter.py  pathopt_bneb_force.py  pathopt_dneb_force.py  pathopt_gpneb_force.py  pathopt_nesb_force.py  pathopt_om_force.py  pbc.py  (+13 more)
biaspotpy/ModelFunction/: __init__.py  avoiding_model_function.py  binary_image_ts_search_model_function.py  conical_model_function.py  opt_meci.py  opt_mesx.py  opt_mesx_2.py  seam_model_function.py
biaspotpy/Optimizer/: QHAdam.py  adabelief.py  adabound.py  adadelta.py  adaderivative.py  adadiff.py  adafactor.py  adam.py  adamax.py  adamod.py  adamw.py  adiis.py  component_wise_scaling.py  conjugate_gradient.py  eve.py  fastadabelief.py  fire.py  gdiis.py  gediis.py  gpmin.py  gradientdescent.py  hessian_update.py  hybrid_rfo.py  lbfgs.py  linesearch.py  nadam.py  newton.py  prodigy.py  purtubation.py  radam.py  rfo.py  ric_rfo.py  rmspropgrave.py  sadam.py  samsgrad.py  trust_radius.py  yogi.py
docs/manuals/: AUTOTS_V2_README.md  RUN_AUTOTS_README.md
docs/source/: conf.py  index.rst
envs/: environment.yml
multioptpy/: AFIR_potential.py  MO_analysis.py  __init__.py  approx_hessian.py  ase_calculation_tools.py  bond_connectivity.py  calc_tools.py  cmds_analysis.py  constraint_condition.py  dxtb_calculation_tools.py  electrostatic_potential.py  entrypoints.py  fileio.py  flux_potential.py  gaussian_potential.py  geodesic_interpolation.py  idpp.py  ieip.py  interface.py  irc.py  keep_angle_potential.py  keep_outofplain_angle_potential.py  keep_potential.py  mechano_force_potential.py  moleculardynamics.py  neb.py  normal_mode_analyzer.py  oniom.py  optimization.py  optimizer.py  parameter.py  pathopt_bneb_force.py  pathopt_ewbneb_force.py  pathopt_neb_force.py  pathopt_qsm_force.py  pbc.py  pca_analysis.py  polar_coordinate.py  potential.py  psi4_calculation_tools.py  (+8 more)
multioptpy/Calculator/: ase_calculation_tools.py  dxtb_calculation_tools.py  emt_calculation_tools.py  (+9 more)
scripts/: conformation_search.py  ieipmain.py  mdmain.py  nebmain.py  optmain.py  orientation_search.py  relaxed_scan.py  run_autots.py  run_mapper.py
test/: 222cycle.xyz  README.md  autots_v2_test.xyz  claisen_rearrengment.xyz  config_autots_run_xtb_test.json  config_autots_v2_test.json  config_mapper_test.json  decarboxylation.xyz  diels_alder_rxn.xyz  epoxidation.xyz  hydroboration.xyz  hydroformylation.xyz  intramolecular_aldol_rxn.xyz  mapper_test.xyz  reductive_elimination.xyz  s8_for_confomation_search_test.xyz  swarn_oxidation.xyz  test_inputs.md  witting_rxn.xyz
(+207 files in other folders)
