# =====================================================================
# WARNING: This package is only supported and tested on Linux environments
# (or WSL2 on Windows). Due to PySCF dependency, native Windows installation 
# is not recommended and may fail.
# It is strongly recommended to first create an isolated environment using Conda and then perform the installation via pip.
# $ conda create -n <env-name> python=3.12 pip
# =====================================================================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MultiOptPy"
version = "1.20.5"
description = "Multifunctional geometry optimization tools for quantum chemical calculations."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [
    {name = "ss0832", email = "highlighty876@gmail.com"}
]


dependencies = [
    "numpy>=2.2.0",             
    "scipy>=1.13.0",           
    "matplotlib>=3.10.0",      
    "torch~=2.6.0",            
    "pyscf>=2.9.0",            
    "tblite>=0.4.0",           
    "ase~=3.26.0",             
    "fairchem-core~=2.7.0",    
    "sympy>=1.13.0"
]

[project.scripts]
optmain = "multioptpy.entrypoints:run_optmain"     
ieipmain = "multioptpy.entrypoints:run_ieipmain"  
mdmain = "multioptpy.entrypoints:run_mdmain"       
nebmain = "multioptpy.entrypoints:run_nebmain"     
confsearch = "multioptpy.entrypoints:run_confsearch"
relaxedscan = "multioptpy.entrypoints:run_relaxedscan"
run_autots = "multioptpy.entrypoints:run_autots"       
orientsearch = "multioptpy.entrypoints:run_orientsearch"

[tool.setuptools.packages.find]
where = ["."]

include = ["multioptpy*"]
